--- a/.github/workflows/proto.yml
+++ b/.github/workflows/proto.yml
@@ -20,6 +20,13 @@ jobs:
       - name: Install buf
         run: go install github.com/bufbuild/buf/cmd/buf@latest
 
+      - name: Install protoc-gen-go, protoc-gen-go-grpc
+        run: |
+          go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
+          go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
+          echo "$GOPATH/bin"
+          export PATH="$PATH:$(go env GOPATH)/bin"
+
       - name: Lint proto
         run: buf lint
 
